2015-01-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* Parsetexi/lib/Parsetexi.pm: Update a comment.
	* end_line.c (end_line): Check return value of lookup_command 
	correctly.

2015-01-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree_types.h (enum extra_type): Add extra_string value.
	* extra.c (add_extra_string): New function.
	* dump_perl.c (dump_extra) <extra_string>: Support.

	* end_line.c (parse_line_command_args): New function.
	<CM_columnfractions>: Split argument line up by whitespace.

	* end_line.c (end_line) <ET_misc_line_arg>: Call 
	parse_line_command_args, and store result in "misc_args" key.
	<@multitable @columnfractions>: Copy "misc_args" key into
	"columnfractions" key.
	<@multitable prototype line>: Set 'prototypes' extra key, 
	copying from contents of argument container.

	* handle_commands.c (handle_misc_command): Set "cell_number" 
	extra keys for a multitable (not correctly yet).
	* end_line.c (end_line) <CM_enumerate>: Output 
	"enumerate_specification" key.

	* command_data.txt: Add @heading.  Remove root flag from heading 
	commands.
	* command_data.awk: Correct output of CM_APOSTROPHE symbol.

2015-01-22  Gavin Smith  <gavinsmith0123@gmail.com>

	* parser.c (big_loop) <reading @ command>: Don't advance the 
	line pointer until we are sure we want to process the command
	name that was just read (and not, for example, do stuff with
	menus).

2015-01-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* tree_types.h (enum extra_type): New values 'extra_node_spec',
	'extra_node_spec_array'.
	(NODE_SPEC_EXTRA): New type.
	* extra.c (add_extra_node_spec, add_extra_node_spec_array): New
	functions.
	* dump_perl.c (dump_extra): Output these two new types of extra 
	key.

	* end_line.c (parse_node_manual): New function.

	* menus.c (register_extra_menu_entry_information): Call 
	parse_node_manual and call add_extra_node_spec with the result.
	* end_line.c (end_line) <@node>: Create 'nodes_manuals' array 
	and call add_extra_node_spec_array. 
