@@ -4,6 +4,9 @@
 	* end_line.c (end_line): Check return value of lookup_command 
 	correctly.
 
+	* Parsetexi/Parsetexi.xs, Parsetexi/lib/Parsetexi.pm: Remove 
+	constant loading code.
+
 2015-01-23  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tree_types.h (enum extra_type): Add extra_string value.
